Some differences in the spacing of code blocks crept in at some point.  Trying to fix them up.

--- a/docs/src/css/libsbml-base-stylesheet.css
+++ b/docs/src/css/libsbml-base-stylesheet.css
@@ -415,6 +415,7 @@ pre.fragment
     color: black;
     padding: 5px;
     padding-top: 0.5em;
+    padding-left: 0.75em;
     margin: 0.75em 1em;
     overflow: auto;
     word-wrap: break-word;
